--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -53,3 +53,27 @@ body {
     text-wrap: balance;
   }
 }
+
+.cursor-pointer:hover {
+  transform: translateY(-4px);
+  transition: transform 0.3s;
+}
+
+.video-preview {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  /* 16:9 Aspect Ratio */
+  background-color: #000;
+}
+
+.video-preview img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* This ensures the image covers the whole area without distortion */
+}
